opam-version: "2.0"

license:      "MIT"
authors:      ["Johan Bolmsjö"]
maintainer:   "dev@johan.bitmaster.se"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-j" jobs]
]

install: ["dune" "install"]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune"  {build & >= "1.9"}
]

homepage:    "https://github.com/johan-bolmsjo/setop"
bug-reports: "https://github.com/johan-bolmsjo/setop/issues"
dev-repo:    "git+https://github.com/johan-bolmsjo/setop.git"

synopsis: "Command line tool to perform set operations on lines from text files."

description: ""
